--- a/public/about/index.html
+++ b/public/about/index.html
@@ -63,7 +63,7 @@
     
 
     <div class="article-content">
-      <p>This is a &ldquo;hello world&rdquo; example website for the <a href="https://github.com/rstudio/blogdown"><strong>blogdown</strong></a> package. The theme was forked from <a href="https://github.com/jrutheiser/hugo-lithium-theme">@jrutheiser/hugo-lithium-theme</a> and modified by <a href="https://github.com/yihui/hugo-lithium">Yihui Xie</a>.</p>
+      <p>At KDV, we aim to help improve the efficiency and effectiveness of decisions that depend on multifaceted and complex data. Drawing from a diverse background in natural sciences, social sciences, and emerging data sciences, we bring proven experience, unique insights and passion to our projects. We hope to utilize this blog to engage a larger community of ecologists, statisticians, data scientists, and everyone in-between to achieve a shared goal of collective learning.</p>
 
     </div>
   </article>
