--- a/public/about/index.html
+++ b/public/about/index.html
@@ -63,7 +63,7 @@
     
 
     <div class="article-content">
-      <p>At KDV, we aim to help improve the efficiency and effectiveness of decisions that depend on multifaceted and complex data. Drawing from a diverse background in natural sciences, social sciences, and emerging data sciences, we bring proven experience, unique insights and passion to our projects. We hope to utilize this blog to engage a larger community of ecologists, statisticians, data scientists, and everyone in-between to achieve a shared goal of collective learning..</p>
+      <p>At KDV, we aim to help improve the efficiency and effectiveness of decisions that depend on multifaceted and complex data. Drawing from a diverse background in natural sciences, social sciences, and emerging data sciences, we bring proven experience, unique insights and passion to our projects. We hope to utilize this blog to engage a larger community of ecologists, statisticians, data scientists, and everyone in-between to achieve a shared goal of collective learning.</p>
 
     </div>
   </article>
